# freezer-web-ui

./: .gitignore  .gitreview  .pylintrc  .zuul.yaml  CONTRIBUTING.rst  README.rst  _50_freezer.py  babel-django.cfg  babel-djangojs.cfg  bindep.txt  lower-constraints.txt  manage.py  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: README.rst  gate_hook.sh  local.conf.example  plugin.sh  settings
devstack/files/: _5050_freezer.py.template  _50_freezer.py.template
devstack/lib/: freezer-web-ui
disaster_recovery/: dashboard.py  urls.py  utils.py  version.py
disaster_recovery/actions/: panel.py  tables.py  urls.py  views.py
disaster_recovery/actions/templates/actions/: _action.html  _advanced.html  _rules.html  _snapshot.html  index.html
disaster_recovery/actions/workflows/: action.py
disaster_recovery/api/: api.py
disaster_recovery/api/rest/: rest_api.py  urls.py
disaster_recovery/backups/: panel.py  tables.py  urls.py  views.py
disaster_recovery/backups/templates/backups/: restore.html
disaster_recovery/backups/workflows/: restore.py
disaster_recovery/clients/: panel.py  tables.py  urls.py  views.py
disaster_recovery/enabled/: _5050_freezer.py
disaster_recovery/jobs/: browsers.py  panel.py  tables.py  urls.py  views.py
disaster_recovery/jobs/templates/jobs/: _actions.html  _info.html  _scheduling.html  _snapshot.html
disaster_recovery/jobs/workflows/: actions.py  create.py  update_actions.py  update_job.py
disaster_recovery/locale/de/LC_MESSAGES/: django.po
disaster_recovery/locale/en_GB/LC_MESSAGES/: django.po
disaster_recovery/locale/id/LC_MESSAGES/: django.po
disaster_recovery/locale/ko_KR/LC_MESSAGES/: django.po
disaster_recovery/locale/zh_CN/LC_MESSAGES/: django.po
disaster_recovery/locale/zh_Hans/LC_MESSAGES/: django.po
disaster_recovery/sessions/: browsers.py  panel.py  tables.py  urls.py  views.py
disaster_recovery/sessions/workflows/: attach.py  create.py
disaster_recovery/tests/: settings.py
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/contributor/: contributing.rst
freezer_ui/: dashboard.py  urls.py  utils.py  version.py
freezer_ui/actions/: panel.py  tables.py  urls.py  views.py
freezer_ui/actions/workflows/: action.py
freezer_ui/api/: api.py  panel.py  urls.py
freezer_ui/api/rest/: rest_api.py  urls.py
freezer_ui/backups/: panel.py  tables.py  urls.py  views.py
freezer_ui/backups/workflows/: restore.py
freezer_ui/clients/: panel.py  tables.py  urls.py  views.py
freezer_ui/enabled/: _5050_freezer_panel_group.py  _5051_freezer_actions.py  _5052_freezer_backups.py  _5053_freezer_clients.py  _5054_freezer_jobs.py  _5055_freezer_sessions.py  _5056_freezer_api.py  _7050_freezer_remove_panel_.py
freezer_ui/jobs/: browsers.py  panel.py  tables.py  urls.py  views.py
freezer_ui/jobs/workflows/: action.py  actions.py  configure.py  create.py  update_actions.py  update_job.py
freezer_ui/sessions/: browsers.py  panel.py  tables.py  urls.py  views.py
freezer_ui/sessions/workflows/: attach.py  create.py  create_session.py
freezer_ui/tests/: settings.py  test_api.py  test_utils.py
playbooks/legacy/freezer-web-ui-ubuntu/: run.yaml
releasenotes/notes/: drop-py-2-7-5fbb19deece255ca.yaml  freezer_dashboard_change-1ffdeccfd2026941.yaml  package_rename-635a1b32e355cd11.yaml
tests/: api_tests.py  rest_api_tests.py  settings.py
tools/: install_venv.py  install_venv_common.py  with_venv.sh
(+46 files in other folders)
