[metadata]
name = freezer-web-ui
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
summary = Freezer - Backup as a Service User Interface
description_file = README.rst
description-content-type = text/x-rst
license = Apache-2
url = https://docs.openstack.org/freezer/latest/
python_requires = >=3.8
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
keywords =
    horizon
    freezer
    backup
    openstack

[files]
packages =
    freezer_ui
